--- a/food-delivery-app/app/src/main/res/navigation/nav_graph_all.xml
+++ b/food-delivery-app/app/src/main/res/navigation/nav_graph_all.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/nav_graph_all" />
+    android:id="@+id/nav_graph_all"
+    app:startDestination="@id/nav_restaurant">
+    <include app:graph="@navigation/nav_restaurant" />
+</navigation>
