bk-restaurant-detail-page -> Add restaurant detail page

--- a/food-delivery-app/app/src/main/res/layout/fragment_restaurant_list.xml
+++ b/food-delivery-app/app/src/main/res/layout/fragment_restaurant_list.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="viewModel"
-            type="com.bkarakoca.fooddeliveryapp.scene.restaurant.FRRestaurantListVM" />
+            type="com.bkarakoca.fooddeliveryapp.scene.restaurant.listing.FRRestaurantListVM" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
