--- a/food-delivery-app/app/src/main/res/layout/item_restaurant.xml
+++ b/food-delivery-app/app/src/main/res/layout/item_restaurant.xml
@@ -11,6 +11,7 @@
     </data>
 
     <com.google.android.material.card.MaterialCardView
+        android:id="@+id/card_view_restaurant_item"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
