--- a/food-delivery-app/app/src/main/res/layout/item_restaurant.xml
+++ b/food-delivery-app/app/src/main/res/layout/item_restaurant.xml
@@ -49,7 +49,7 @@
                     android:layout_gravity="end|top"
                     android:layout_marginTop="16dp"
                     android:layout_marginEnd="16dp"
-                    app:setImageResourceId="@{restaurant.restaurantFavoriteIconResId}"
+                    app:setImageResourceId="@{restaurant.getFavoriteIcon}"
                     tools:src="@drawable/favorite_not" />
 
                 <com.bkarakoca.fooddeliveryapp.internal.customui.TextWithSmallImageView
