bk-restaurant-list-ordering -> Add sections and list order to restaurant listing page

--- a/food-delivery-app/app/src/main/res/layout/fragment_restaurant_list.xml
+++ b/food-delivery-app/app/src/main/res/layout/fragment_restaurant_list.xml
@@ -32,10 +32,11 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:layout_marginTop="24dp"
-            android:text="Filter"
+            android:text="@string/text_filter"
             app:layout_constraintTop_toBottomOf="@+id/text_view_header" />
 
         <LinearLayout
+            android:visibility="gone"
             android:id="@+id/linear_layout_filter"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
