--- a/food-delivery-app/app/src/main/res/layout/fragment_restaurant_list.xml
+++ b/food-delivery-app/app/src/main/res/layout/fragment_restaurant_list.xml
@@ -41,6 +41,7 @@
                 android:id="@+id/chip_best_match"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:checked="true"
                 android:text="best match"/>
 
             <com.google.android.material.chip.Chip
